--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text" placeholder="Enter business name" id="companySearch" />
     <div id="output"></div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
